<resources>
    <string name="app_name">QReader</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NotValidScan">No es un QR válido, solo se aceptan direcciones de internet y Vcards</string>
    <string name="OPTselect">Selecciona una opción:</string>
    <string name="QRScan">Escáner de códigos QR</string>
    <string name="VcardGen">Generador de Vcards QR</string>
    <string name="ADTitle">Permiso Requerido</string>
    <string name="ADMessage">Se requiere el permiso solamente para leer códigos QR, no sé pondrá en riesgo ninguna otra imagen capturada con la cámara</string>
    <string name="ADPButton">Entendido</string>
    <string name="ADNButton">Salir</string>
    <string name="PermaBan">El permiso se negó permanentemente</string>
    <string name="VT_welcome">Hola! Por favor, completa lo siguiente para generar tu Vcard.</string>
    <string name="name">Nombre</string>
    <string name="number">Número de Teléfono Celular</string>
    <string name="email">Email (Opcional)*</string>
    <string name="btn_reservar">Generar</string>
    <string name="error_nombre">El nombre ingresado no es valido, por favor verificalo.</string>
    <string name="error_email">El Email ingresado no es valido, por favor verificalo.</string>
    <string name="error_numero">El número ingresado no es válido, por favor verificalo</string>
    <string name="VCardDetected">Se ha detectado una Vcard</string>
    <string name="ContactoDetectado">"Contacto agregado: %s, %s, %s"</string>
</resources>