<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/formFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <EditText
        android:id="@+id/ET_name"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/custom_input_et"
        android:drawablePadding="12dp"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLength="35"
        android:paddingStart="18dp"
        android:paddingEnd="12dp"
        android:textColorHint="@color/backgroundEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_titulo"
        app:layout_constraintWidth_percent="0.9" />

    <EditText
        android:id="@+id/ET_number"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input_et"
        android:drawablePadding="12dp"
        android:hint="@string/number"
        android:inputType="number"
        android:maxLength="10"
        android:paddingStart="18dp"
        android:paddingEnd="12dp"
        android:textColorHint="@color/backgroundEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_name"
        app:layout_constraintVertical_bias="0.100000024"
        app:layout_constraintWidth_percent="0.9" />

    <EditText
        android:id="@+id/ET_email"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input_et"
        android:drawablePadding="12dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="35"
        android:paddingStart="18dp"
        android:paddingEnd="12dp"
        android:textColorHint="@color/backgroundEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_number"
        app:layout_constraintVertical_bias="0.110000014"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/TV_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:text="@string/VT_welcome"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_verificar"
        android:layout_width="187dp"
        android:layout_height="61dp"
        android:enabled="false"
        android:text="@string/btn_reservar"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_email" />

    <ImageView
        android:id="@+id/imageViewQRCode"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_email" />

</androidx.constraintlayout.widget.ConstraintLayout>